--- a/CoffeeShop/CoffeeShop.csproj
+++ b/CoffeeShop/CoffeeShop.csproj
@@ -39,11 +39,17 @@
     <Reference Include="FlatButton">
       <HintPath>JControl\FlatButton.dll</HintPath>
     </Reference>
+    <Reference Include="JDragControl">
+      <HintPath>C:\Users\Dell\Downloads\JControls\JDragControl.dll</HintPath>
+    </Reference>
     <Reference Include="JImageButton">
       <HintPath>JControl\JImageButton.dll</HintPath>
     </Reference>
     <Reference Include="JMaterialTextbox">
       <HintPath>JControl\JMaterialTextbox.dll</HintPath>
+    </Reference>
+    <Reference Include="JMetroTextBox">
+      <HintPath>C:\Users\Dell\Downloads\JControls\JMetroTextBox.dll</HintPath>
     </Reference>
     <Reference Include="JTextBox">
       <HintPath>JControl\JTextBox.dll</HintPath>
@@ -72,6 +78,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Button_WOC.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,11 +93,65 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="FThongTinKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FThongTinKhachHang.Designer.cs">
+      <DependentUpon>FThongTinKhachHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="F_BangKhoa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_BangKhoa.Designer.cs">
+      <DependentUpon>F_BangKhoa.cs</DependentUpon>
+    </Compile>
     <Compile Include="F_BanHang.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="F_BanHang.Designer.cs">
       <DependentUpon>F_BanHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="F_ChinhSuaTaiKhoan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_ChinhSuaTaiKhoan.Designer.cs">
+      <DependentUpon>F_ChinhSuaTaiKhoan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="F_DanhSachBan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_DanhSachBan.Designer.cs">
+      <DependentUpon>F_DanhSachBan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="F_Order.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_Order.Designer.cs">
+      <DependentUpon>F_Order.cs</DependentUpon>
+    </Compile>
+    <Compile Include="F_QuanLyTaiKhoan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_QuanLyTaiKhoan.Designer.cs">
+      <DependentUpon>F_QuanLyTaiKhoan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="F_ThemTaiKhoan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_ThemTaiKhoan.Designer.cs">
+      <DependentUpon>F_ThemTaiKhoan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ListItem.Designer.cs">
+      <DependentUpon>ListItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListOrder.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ListOrder.Designer.cs">
+      <DependentUpon>ListOrder.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,8 +161,35 @@
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FThongTinKhachHang.resx">
+      <DependentUpon>FThongTinKhachHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_BangKhoa.resx">
+      <DependentUpon>F_BangKhoa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="F_BanHang.resx">
       <DependentUpon>F_BanHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_ChinhSuaTaiKhoan.resx">
+      <DependentUpon>F_ChinhSuaTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_DanhSachBan.resx">
+      <DependentUpon>F_DanhSachBan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_Order.resx">
+      <DependentUpon>F_Order.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_QuanLyTaiKhoan.resx">
+      <DependentUpon>F_QuanLyTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_ThemTaiKhoan.resx">
+      <DependentUpon>F_ThemTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListItem.resx">
+      <DependentUpon>ListItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListOrder.resx">
+      <DependentUpon>ListOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -147,6 +237,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Collapse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Info.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Find.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
