--- a/CoffeeShop/CoffeeShopManagement.csproj
+++ b/CoffeeShop/CoffeeShopManagement.csproj
@@ -82,10 +82,20 @@
     <Compile Include="Button_WOC.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="CTHD.cs" />
+    <Compile Include="DetailBill.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="Encrypt.cs" />
     <Compile Include="Event.cs" />
+    <Compile Include="FlowLayoutPanelBuffered.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="FormIDTable.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormIDTable.Designer.cs">
+      <DependentUpon>FormIDTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormChangeInfoItem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,11 +138,11 @@
     <Compile Include="FormMenuItem.Designer.cs">
       <DependentUpon>FormMenuItem.cs</DependentUpon>
     </Compile>
-    <Compile Include="FThongTinKhachHang.cs">
+    <Compile Include="FormThongTinKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FThongTinKhachHang.Designer.cs">
-      <DependentUpon>FThongTinKhachHang.cs</DependentUpon>
+    <Compile Include="FormThongTinKhachHang.Designer.cs">
+      <DependentUpon>FormThongTinKhachHang.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLock.cs">
       <SubType>Form</SubType>
@@ -176,7 +186,13 @@
     <Compile Include="FormAddStaff.Designer.cs">
       <DependentUpon>FormAddStaff.cs</DependentUpon>
     </Compile>
-    <Compile Include="HoaDon.cs" />
+    <Compile Include="Bill.cs" />
+    <Compile Include="FormTienKhachDua.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTienKhachDua.Designer.cs">
+      <DependentUpon>FormTienKhachDua.cs</DependentUpon>
+    </Compile>
     <Compile Include="ID.cs" />
     <Compile Include="IO.cs" />
     <Compile Include="Item.cs" />
@@ -196,6 +212,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Staff.cs" />
+    <Compile Include="Table.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Table.Designer.cs">
+      <DependentUpon>Table.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utility.cs" />
     <EmbeddedResource Include="FormChangeInfoItem.resx">
       <DependentUpon>FormChangeInfoItem.cs</DependentUpon>
     </EmbeddedResource>
@@ -204,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormChinhSuaKhachHang.resx">
       <DependentUpon>FormChinhSuaKhachHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormIDTable.resx">
+      <DependentUpon>FormIDTable.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormInit.resx">
       <DependentUpon>FormInit.cs</DependentUpon>
@@ -217,8 +243,8 @@
     <EmbeddedResource Include="FormMenuItem.resx">
       <DependentUpon>FormMenuItem.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FThongTinKhachHang.resx">
-      <DependentUpon>FThongTinKhachHang.cs</DependentUpon>
+    <EmbeddedResource Include="FormThongTinKhachHang.resx">
+      <DependentUpon>FormThongTinKhachHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLock.resx">
       <DependentUpon>FormLock.cs</DependentUpon>
@@ -241,6 +267,9 @@
     <EmbeddedResource Include="FormAddStaff.resx">
       <DependentUpon>FormAddStaff.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormTienKhachDua.resx">
+      <DependentUpon>FormTienKhachDua.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ListItem.resx">
       <DependentUpon>ListItem.cs</DependentUpon>
     </EmbeddedResource>
@@ -257,6 +286,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Table.resx">
+      <DependentUpon>Table.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -299,6 +331,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Find.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CASIO.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
