--- a/CoffeeShop/CoffeeShopManagement.csproj
+++ b/CoffeeShop/CoffeeShopManagement.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -82,6 +83,7 @@
     <Compile Include="Button_WOC.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="CheckDate.cs" />
     <Compile Include="DetailBill.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Data.cs" />
@@ -137,6 +139,12 @@
     </Compile>
     <Compile Include="FormMenuItem.Designer.cs">
       <DependentUpon>FormMenuItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormStatistic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormStatistic.Designer.cs">
+      <DependentUpon>FormStatistic.cs</DependentUpon>
     </Compile>
     <Compile Include="FormThongTinKhachHang.cs">
       <SubType>Form</SubType>
@@ -242,6 +250,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenuItem.resx">
       <DependentUpon>FormMenuItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormStatistic.resx">
+      <DependentUpon>FormStatistic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormThongTinKhachHang.resx">
       <DependentUpon>FormThongTinKhachHang.cs</DependentUpon>
