--- a/CoffeeShop/CoffeeShopManagement.csproj
+++ b/CoffeeShop/CoffeeShopManagement.csproj
@@ -65,6 +65,7 @@
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Management" />
@@ -224,6 +225,7 @@
       <DependentUpon>FormTienKhachDua.cs</DependentUpon>
     </Compile>
     <Compile Include="ID.cs" />
+    <Compile Include="Initialization.cs" />
     <Compile Include="IO.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ListItem.cs">
