--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DetailBill.cs" />
     <Compile Include="Expense.cs" />
     <Compile Include="ID.cs" />
+    <Compile Include="IInfo.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
